--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,6 +1,8 @@
 <% @recipe.each do |recipe| %>
+<%= recipe.user.name %>
 <%= recipe.user.recipe_title %>
 <%= image_tag attachment_url(recipe, :image, :fill, 100, 100) %>
 <%= recipes.user.food %>
 <% @maiking.user.maiking_number%>
 <%= image_tag attachment_url(@maiking, :image, :fill, 100, 100) %>
+<% recipe.user.recipe_detail%>
