--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -3,6 +3,20 @@
 <%= recipe.user.recipe_title %>
 <%= image_tag attachment_url(recipe, :image, :fill, 100, 100) %>
 <%= recipes.user.food %>
-<% @maiking.user.maiking_number%>
+<% @maiking.user.maiking_number %>
 <%= image_tag attachment_url(@maiking, :image, :fill, 100, 100) %>
 <% recipe.user.recipe_detail%>
+<%= link_to 'レシピを作成する', edit_recipe_path(recipe), class: "btn btn-sm btn-success edit_recipe_#{recipe.id}" %>
+<div>
+<p>コメント件数：<%= @recipe.post_comments.count %></p>
+<% @recipe.post_comments.each do |post_comment| %>
+  <%= post_comment.user.name %>
+  <%= post_comment.created_at.strftime('%Y/%m/%d') %><%= post_comment.comment %>
+<% end %>
+</div>
+<div>
+<%= form_with(model:[@recipe, @post_comment], local: true) do |f| %>
+  <%= f.text_area :comment, rows:'5',placeholder: "コメントをここに" %>
+  <%= f.submit "送信する" %>
+<% end %>
+</div>
