--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -1,19 +1,29 @@
 <%= form_for @recipe do |form| %>
-  <%= form.attachment_field :image_path %>
-<% end %>
-<%= form_with model:recipe,local:true do |f| %>
-<div class="form-group">
-<%= f.label :レシピタイトル %>
-<%= f.text_field :recipe_title %>
-<div class="form-group">
-<%= f.label :(レシピ詳細) %>
-<%= f.text_area :recipe_detail %>
-<div class="form-group">
-<%= f.label :(コツまたはレシピについて) %>
-<%= f.text_area :trick %>
-<div class="form-group">
-<%= f.label :(材料) %>
-<%= f.text_area :food %>
+  <div class="form-group">
+  <%= form_with model:recipe,local:true do |f| %>
+  <div class="form-group">
+    <%= f.label :レシピタイトル %>
+    <%= f.text_field :recipe_title %>
+  </div>
+  
+  <%= f.label :（出来上がり） %>
+  <%= f.attachment_field :image %>
 
+  <div class="form-group">
+    <%= f.label :(レシピ詳細) %>
+    <%= f.text_area :recipe_detail %>
+  </div>
+  
+  <div class="form-group">
+    <%= f.label :(材料) %>
+    <%= f.text_area :food %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :(コツまたはレシピについて) %>
+    <%= f.text_area :trick %>
+  </div>
+  
+<% end %>
 
 
