--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -1,29 +1,34 @@
-<%= form_for @recipe do |form| %>
+<%= form_with model: @recipe, local:true do |f| %>
   <div class="form-group">
-  <%= form_with model:recipe,local:true do |f| %>
-  <div class="form-group">
-    <%= f.label :レシピタイトル %>
+    <%= f.label 'レシピタイトル' %>
     <%= f.text_field :recipe_title %>
   </div>
-  
   <%= f.label :（出来上がり） %>
   <%= f.attachment_field :image %>
 
   <div class="form-group">
-    <%= f.label :(レシピ詳細) %>
+    <%= f.label 'レシピ詳細' %>
     <%= f.text_area :recipe_detail %>
   </div>
-  
   <div class="form-group">
-    <%= f.label :(材料) %>
-    <%= f.text_area :food %>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :(コツまたはレシピについて) %>
+    <%= f.label 'コツまたはレシピについて' %>
     <%= f.text_area :trick %>
   </div>
-  
+  <div class="form-group">
+    <%= f.label '材料' %>
+    <%= f.text_area :food %>
+  </div>
+  <div class="making-post">
+      <div class="making">
+          <%= f.fields_for :makings do |t| %>
+            <%= render "making_fields", f: t %>
+          <% end %>
+      </div>
+      <div class="links">
+          <%= link_to_add_association "+フォームを追加", f, :makings%>
+      </div>
+  </div>
+   <div class="actions">
+      <%= f.submit '登録' %>
+    </div>
 <% end %>
-
-
