--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,14 +1,18 @@
 <h1>投稿一覧</h1>
-<h2>レシピ</h2>
-<h3>製作者</h3>
-<% @recipes.each do |recipe| %>
-<%= link_to recipe_path (recipe) do %>
-<%= recipe.recipe_title %>
+<div class='container px-5 px-sm-0'>
+  <div class='row'>
+    <div class='col-md-3'>
+      <thead>
+      </thead>
+      <tbody>
+        <tr>
+          <% @recipes.each do |recipe| %>
+          <td><%= link_to recipe.recipe_title,recipe_path(recipe) %></td>
+          <td><%= attachment_image_tag recipe, :image, size: "130x130" %></td>
+          <td>ユーザー</td>
+          <td><%= recipe.user.name %></td>
+          <td><%= link_to 'レシピを編集', edit_recipe_path(@recipes) %></td>
+          <td><%= link_to 'レシピを作成する', new_recipe_path %></td>
+        </tr>
+      </tbody>
 <% end %>
-<%= attachment_image_tag recipe, :image, :fill, 100, 100 %>
-<%= recipe.created_at.strftime("%Y-%m-%d %H:%M:%S") %>
-<%= recipe.user.name %>
-<%= link_to 'レシピを作成する', edit_recipe_path(recipe), class: "btn btn-sm btn-success edit_recipe_#{recipe.id}" %>
-<% end %>
-<%= link_to 'レシピを作成する', new_recipe_path %>
-
