--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,23 +1,34 @@
-<%= form_with model: Recipe.new,local:true do |f| %>
+<%= form_with model: @recipe, local:true do |f| %>
   <div class="form-group">
     <%= f.label 'レシピタイトル' %>
     <%= f.text_field :recipe_title %>
   </div>
-  <%= f.label :（出来上がり） %>
+  <%= f.label :'出来上がり' %>
   <%= f.attachment_field :image %>
-  
+
   <div class="form-group">
-    <%= f.label '(レシピ詳細)' %>
+    <%= f.label 'レシピ詳細' %>
     <%= f.text_area :recipe_detail %>
   </div>
   <div class="form-group">
-    <%= f.label '(コツまたはレシピについて)' %>
+    <%= f.label 'コツまたはレシピについて' %>
     <%= f.text_area :trick %>
   </div>
   <div class="form-group">
-    <%= f.label '(材料)' %>
+    <%= f.label '材料' %>
     <%= f.text_area :food %>
   </div>
-  
-  <%= f.submit '登録' %>
+  <div class="making-post">
+      <div class="making">
+          <%= f.fields_for :makings do |t| %>
+            <%= render "making_fields", f: t %>
+          <% end %>
+      </div>
+      <div class="links">
+          <%= link_to_add_association "+フォームを追加", f, :makings%>
+      </div>
+  </div>
+   <div class="actions">
+      <%= f.submit '登録' %>
+    </div>
 <% end %>
