--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,22 +1,30 @@
-<% @recipe.each do |recipe| %>
-<%= recipe.user.name %>
-<%= recipe.user.recipe_title %>
-<%= image_tag attachment_url(recipe, :image, :fill, 100, 100) %>
-<%= recipes.user.food %>
-<% @maiking.user.maiking_number %>
-<%= image_tag attachment_url(@maiking, :image, :fill, 100, 100) %>
-<% recipe.user.recipe_detail%>
-<%= link_to 'レシピを作成する', edit_recipe_path(recipe), class: "btn btn-sm btn-success edit_recipe_#{recipe.id}" %>
+<%= @recipe.user.name %>
+<%= @recipe.recipe_title %>
+<%#= attachment_image_tag recipe, :image, size: "50x50") %>
+<%= @recipe.food %>
+<%# @recipe.maiking_number %>
+<%#= attachment_image_tag recipe, :image, size: "50x50" %>
+<% @recipe.recipe_detail%>
+<%= link_to 'レシピを編集する', edit_recipe_path(@recipe), class: "btn btn-sm btn-success edit_recipe_#{@recipe.id}" %>
 <div>
-<p>コメント件数：<%= @recipe.post_comments.count %></p>
-<% @recipe.post_comments.each do |post_comment| %>
-  <%= post_comment.user.name %>
-  <%= post_comment.created_at.strftime('%Y/%m/%d') %><%= post_comment.comment %>
-<% end %>
+  <p>コメント件数：<%= @recipe.post_comments.count %></p>
+    <% @recipe.post_comments.each do |post_comment| %>
+    <%= post_comment.user.name %>
+    <%= post_comment.comment %>
+    <% if post_comment.user == current_user %>
+     <%= link_to "delete",  recipe_post_comment_path(recipe_comment.recipe, recipe_comment), method: :delete %>
+    <% end %>
+    <% end %>
 </div>
 <div>
-<%= form_with(model:[@recipe, @post_comment], local: true) do |f| %>
-  <%= f.text_area :comment, rows:'5',placeholder: "コメントをここに" %>
-  <%= f.submit "送信する" %>
-<% end %>
+  <% if current_user != @recipe.user %>
+  <%= form_with(model:[@recipe, @postcomment], local: true) do |f| %>
+    <%= f.text_area :comment, rows:'5',placeholder: "コメントをここに" %>
+    <%= f.submit "送信する" %>
+    <% end %>
+  <% end %>
+    <% if current_user.id == @recipe.user_id %>
+      <td><%= link_to 'レシピを編集', edit_recipe_path(@recipes) %></td>
+      <td><%= link_to 'Destroy', recipe_path(@recipe), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_recipe_#{@recipe.id}"%></td>
+    <% end %>
 </div>
