--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -1,34 +1,41 @@
-<%= form_with model: @recipe, local:true do |f| %>
-  <div class="form-group">
-    <%= f.label 'レシピタイトル' %>
-    <%= f.text_field :recipe_title %>
-  </div>
-  <%= f.label :（出来上がり） %>
-  <%= f.attachment_field :image %>
+<div class='container'>
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <%= form_with model: @recipe, local:true do |f| %>
+        <div class="form-group">
+          <%= f.text_field :recipe_title, class: "form-control", placeholder: 'レシピタイトル' %>
+        </div>
 
-  <div class="form-group">
-    <%= f.label 'レシピ詳細' %>
-    <%= f.text_area :recipe_detail %>
-  </div>
-  <div class="form-group">
-    <%= f.label 'コツまたはレシピについて' %>
-    <%= f.text_area :trick %>
-  </div>
-  <div class="form-group">
-    <%= f.label '材料' %>
-    <%= f.text_area :food %>
-  </div>
-  <div class="making-post">
-      <div class="making">
-          <%= f.fields_for :makings do |t| %>
+          <%= f.label '出来上がりイメージ'%>
+          <%= f.attachment_field :image %>
+
+        <div class="form-group">
+          <%= f.text_area :recipe_detail, class: "form-control", placeholder: 'レシピ詳細'  %>
+        </div>
+
+        <div class="form-group">
+          <%= f.text_area :trick, class: "form-control", placeholder: 'コツまたはレシピについて'  %>
+        </div>
+
+        <div class="form-group">
+          <p><%= f.label '材料' %><p>
+          <%= f.text_area :food, class: "form-control", placeholder: '例　塩　〜g'  %>
+        </div>
+
+        <div class="making-post">
+          <div class="making">
+            <%= f.fields_for :makings do |t| %>
             <%= render "making_fields", f: t %>
-          <% end %>
-      </div>
-      <div class="links">
-          <%= link_to_add_association "+フォームを追加", f, :makings%>
-      </div>
-  </div>
-   <div class="actions">
-      <%= f.submit '登録' %>
+            <% end %>
+          </div>
+          <div class="links">
+            <%= link_to_add_association "+フォームを追加", f, :makings%>
+          </div>
+        </div>
+        <div class="actions">
+          <%= f.submit '登録' %>
+        </div>
+        <% end %>
     </div>
-<% end %>
+  </div>
+</div>
