--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,18 +1,34 @@
 <div class='container px-5 px-sm-0'>
-  <div class='row'>
-    <div class='col-md-3'>
-      <thead>
-        <h1>投稿一覧</h1>
-      </thead>
-      <tbody>
-        <tr>
-          <% @recipes.each do |recipe| %>
-          <td><%= link_to recipe.recipe_title,recipe_path(recipe) %></td>
-          <td><%= attachment_image_tag recipe, :image, size: "130x130" %></td>
+  <div class="row">
+    <div class='col-md-4'>
+      <%= render 'users/index', user: current_user %>
+      <% if user_signed_in? %>
+      <%= form_tag(search_path, method: :get) do %>
+
+　    <%= select_tag 'range' ,options_for_select([['---選択してください---', ''], ['User', '1'], ['Recipe', '2']]) %>
+　    
+   　　<%= select_tag 'search', options_for_select([["前方一致","forward_match"], ["後方一致","backward_match"], ["完全一致","perfect_match"], ["部分一致","partial_match"]]) %>
+   　　<%= text_field_tag (:word) %>
+   　　<%= submit_tag "検索" %>
+      <% end %>
+      <% end %>
+    </div>
+    <div class="col-sm-6 col-md-5 offset-md-2 col-lg-6 offset-lg-0">
+    <thead>
+      <h1>投稿一覧</h1>
+    </thead>
+      <tr>
+        <% @recipes.each do |recipe| %>
+          <h2><%= link_to recipe.recipe_title,recipe_path(recipe) %></h2>
+          <p><%= attachment_image_tag recipe, :image, size: "130x130" %></p>
           <td>ユーザー</td>
           <td><%= recipe.user.name %></td>
-          <td><%= link_to 'レシピを編集', edit_recipe_path(@recipes) %></td>
-          <td><%= link_to 'レシピを作成する', new_recipe_path %></td>
-        </tr>
-      </tbody>
+          <% if current_user.id == @recipe.user_id %>
+          <th><%= link_to 'レシピを編集', edit_recipe_path(@recipes) %></th>
+        <% end %>
+      </tr>
+    </div>
+  </div>
+  </div>
+</div>
 <% end %>
