--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,31 +1,55 @@
-<%= @recipe.user.name %>
-<%= @recipe.recipe_title %>
-<%#= attachment_image_tag recipe, :image, size: "50x50") %>
-<%= @recipe.food %>
-<%# @recipe.maiking_number %>
-<%#= attachment_image_tag recipe, :image, size: "50x50" %>
-<% @recipe.recipe_detail%>
-<%= render 'favorites/favorite', recipe: @re %>
-<%= link_to 'レシピを編集する', edit_recipe_path(@recipe), class: "btn btn-sm btn-success edit_recipe_#{@recipe.id}" %>
-<div>
-  <p>コメント件数：<%= @recipe.post_comments.count %></p>
-    <% @recipe.post_comments.each do |post_comment| %>
-    <%= post_comment.user.name %>
-    <%= post_comment.comment %>
-    <% if post_comment.user == current_user %>
-     <%= link_to "delete",  recipe_post_comment_path(recipe_comment.recipe, recipe_comment), method: :delete %>
-    <% end %>
-    <% end %>
-</div>
-<div>
-  <% if current_user != @recipe.user %>
-  <%= form_with(model:[@recipe, @postcomment], local: true) do |f| %>
-    <%= f.text_area :comment, rows:'5',placeholder: "コメントをここに" %>
-    <%= f.submit "送信する" %>
-    <% end %>
-  <% end %>
-    <% if current_user.id == @recipe.user_id %>
-      <td><%= link_to 'レシピを編集', edit_recipe_path(@recipes) %></td>
-      <td><%= link_to 'Destroy', recipe_path(@recipe), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_recipe_#{@recipe.id}"%></td>
-    <% end %>
+<div class='container'>
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <thead>
+        <h1><%= @recipe.recipe_title %></h1>
+      </thead>
+        <p><%= attachment_image_tag @recipe, :image, size: "280x200" %></p>
+          <tbody>
+            <% @recipe.makings.each do |making| %>
+              <tr>
+                <p><%= attachment_image_tag making, :image, size: "130x130" %></p>
+                <td><%= making.making_detail %></td>
+              </tr>
+            <% end %>
+              <tr>
+                 <h5>材料</h5>
+                    <td><%= @recipe.food %></td>
+                    
+                  <div class="row justify-content-end">
+    
+                    <h5>レシピ詳細</h5>
+                      <td><%= @recipe.recipe_detail %></td>
+                  </div>
+
+                  <h5>ユーザー</h5>
+                    <%= @recipe.user.name %>
+                    <%= render 'relathionsips/rilathionsip',user: @recipe.user %>
+
+                  <div id="recipelike">
+                    <%= render 'favolites/favolite', recipe: @recipe %>
+                  </div>
+                </tr>
+                  <tbody>
+                    <div>
+                      <p>コメント件数：<%= @recipe.post_comments.count %></p>
+                        <% @recipe.post_comments.each do |post_comment| %>
+                        <%= post_comment.user.name %>
+                        <%= post_comment.comment %>
+                        <% end %>
+                    </div>
+        
+                    <div>
+                      <% if current_user != @recipe.user %>
+                      <%= form_with(model:[@recipe, @postcomment], local: true) do |f| %>
+                        <%= f.text_area :comment, rows:'5',placeholder: "コメントをここに" %>
+                        <%= f.submit "送信する" %>
+                        <% end %>
+                      <% end %>
+                    </div>  
+                  </tbody>
+      <%= link_to 'レシピを編集する', edit_recipe_path(@recipe), class: "btn btn-sm btn-success edit_recipe_#{@recipe.id}" %>
+      <%= link_to 'レシピを削除する', recipe_path(@recipe), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_recipe_#{@recipe.id}"%>
+    </div>
+  </div>
 </div>
