投稿機能の修正

--- a/app/views/serches/serche.html.erb
+++ b/app/views/serches/serche.html.erb
@@ -1,6 +1,6 @@
 <table class="table table-hover table-inverse">
 　<% if @range == '2' %>
-　 <h1>Book search for</h1>
+　 <h1>Cooking search for</h1>
   <thead>
     <tr>
       <% @recipe.each do |book| %>
