プロフィール編集

--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -1,6 +1,6 @@
 <table class='table'>
   <h1>My profile</h1>
-  <tr><%= attachment_image_tag @user, :profile_image_id, size: "100x100", fallback: "no_image.jpg" %></tr>
+  <tr><%= attachment_image_tag(@user, :profile_image, size: "100x100", fallback: "no_image.jpg") %></tr>
     <p><%= link_to 'プロフィール編集',edit_user_path(user),class: "btn btn-outline-success" %></p>
     <tr>
       <th>name</th>
