--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -8,8 +8,8 @@
         <%= f.text_field :name, class: "form-control name" %>
       </div>
      <div class="form-group">
-        <%= f.label :image %>
-        <%= f.attachment_field :image, class: "form-control-file user_image" %>
+        <%= f.label :profile_image %>
+        <%= f.attachment_field :profile_image, class: "form-control-file user_image" %>
       </div>
       <div class="form-group">
         <%= f.submit class: 'btn btn-secondary' %>
