--- a/app/views/relathionsips/_rilathionsip.html.erb
+++ b/app/views/relathionsips/_rilathionsip.html.erb
@@ -1,5 +1,5 @@
 <% if current_user.following?(user) %>
-  <%= link_to "フォロー外す", user_relationship_path(user.id), method: :delete, class: "btn btn-primary" %>
+  <%= link_to "フォロー外す", user_relathionsip_path(user.id), method: :delete, class: "btn btn-primary" %>
 <% else %>
   <%= link_to "フォローする", user_relathionsips_path(user.id), method: :post, class: "btn btn-success" %>
 <% end %>
