--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -2,6 +2,7 @@
   <h1>My profile</h1>
   <tr><%= attachment_image_tag(@user, :profile_image, size: "100x100", fallback: "no_image.jpg") %></tr>
     <p><%= link_to 'プロフィール編集',edit_user_path(user),class: "btn btn-outline-success" %></p>
+    <p><%= link_to 'My recipeへ',users_path, class: "btn btn-outline-success" %></p>
     <tr>
       <th>name</th>
       <th><%=link_to user.name %></th>
