--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,7 +17,7 @@
       <table class='table table-hover table-inverse'>
         <thead>
           <tr>
-            <h1>投稿一覧</h1>
+            <h1>My recipe</h1>
             <th>完成品</th>
             <th>タイトル</th>
             <th>ユーザー</th>
@@ -32,8 +32,8 @@
               </td>
               <td><%= link_to recipe.recipe_title,recipe_path(recipe) %></td>
               <td><%= recipe.user.name %></td>
-              <% if current_user.id == @recipe.user_id %>
-              <td><%= link_to 'レシピを編集', edit_recipe_path(@recipes) %></td>
+              <% if current_user.id == recipe.user_id %>
+              <td><%= link_to 'レシピを編集', edit_recipe_path(recipe) %></td>
             </tr>
             <% end %>
           <% end %>
