--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -1,8 +1,9 @@
 <table class='table'>
   <h1>My profile</h1>
   <tr><%= attachment_image_tag(@user, :profile_image, size: "100x100", fallback: "no_image.jpg") %></tr>
-    <p><%= link_to 'プロフィール編集',edit_user_path(user),class: "btn btn-outline-success" %></p>
-    <p><%= link_to 'My recipeへ',users_path, class: "btn btn-outline-success" %></p>
+    <p></p>
+    <p><%= link_to 'プロフィール編集',edit_user_path(user),class: "fas fa-user-edit btn btn-outline-success" %></p>
+    <p><%= link_to 'My recipeへ',users_path, class: "bi bi-file-person-fill btn btn-outline-success" %></p>
     <tr>
       <th>name</th>
       <th><%=link_to user.name %></th>
