--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-info">
   <div class="container">
-    <a class="navbar-brand" href="/"><h3 class="fas fa-utensils"></h3><span>Cooking Link</span></a>
+    <a class="navbar-brand" href="/"><h3 class="fas fa-utensils"></h3><span class="head_text">&nbsp;Cooking Link</span></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -9,7 +9,7 @@
         <% if user_signed_in? %>
           <li><%= link_to 'Home',recipes_path,class: "fas fa-home nav-link text-light" %></li>
           <li><%= link_to 'Make recipe',new_recipe_path,class: "fas fa-receipt nav-link text-light" %></li>
-          <li><%= link_to 'lanking', rank_recipes_path,class: "fas fa-crown nav-link text-light" %></li>
+          <li><%= link_to 'Ranking', rank_recipes_path,class: "fas fa-crown nav-link text-light" %></li>
           <li><%= link_to ' logout', destroy_user_session_path, method: :delete,class: "fas fa-sign-out-alt nav-link text-light" %></li>
         <% else %>
           <li><%= link_to ' sign up', new_user_registration_path,class: "fas fa-user-plus nav-link text-light" %></li>
