--- a/app/views/recipes/rank.html.erb
+++ b/app/views/recipes/rank.html.erb
@@ -1,23 +1,23 @@
 <div class='container px-5 px-sm-0'>
   <div class="row">
       <div class='col-md-3'>
-        <%= render 'users/profile', user: current_user %>
-        <% if user_signed_in? %>
-        <%= form_tag(search_path, method: :get) do %>
-
-         <%= select_tag 'range' ,options_for_select([['---選択してください---', ''], ['User', '1'], ['Recipe', '2']]) %>
-
-         <%= select_tag 'search', options_for_select([["前方一致","forward_match"], ["後方一致","backward_match"], ["完全一致","perfect_match"], ["部分一致","partial_match"]]) %>
-         <%= text_field_tag (:word) %>
-         <%= submit_tag "検索" %>
-        <% end %>
-        <% end %>
-    </div>
+          <div class= "profile_box">
+            <%= render 'users/profile', user: current_user %>
+          </div>
+          <% if user_signed_in? %>
+          <%= form_tag(search_path, method: :get) do %>
+          <%= select_tag 'range' ,options_for_select([['---選択してください---', ''], ['User', '1'], ['Recipe', '2']]) %>
+          <%= select_tag 'search', options_for_select([["前方一致","forward_match"], ["後方一致","backward_match"], ["完全一致","perfect_match"], ["部分一致","partial_match"]]) %>
+          <%= text_field_tag (:word) %>
+          <%= submit_tag "検索" %>
+          <% end %>
+          <% end %>
+      </div>
     <div class='col-md-8 offset-md-1'>
       <table class='table table-hover table-inverse'>
         <thead>
           <tr>
-            <h1>レシピランキング</h1>
+            <h1>Ranking</h1>
             <th>完成品</th>
             <th>タイトル</th>
             <th>ユーザー</th>
