--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,53 +1,44 @@
 <div class='container'>
   <div class="row">
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-      <thead>
-        <h1>
-          <%= @recipe.recipe_title %>
-          <span id="recipelike"><%= render 'favolites/favolite', recipe: @recipe %></span>
-        </h1>
-        </thead>
-          <p><%= attachment_image_tag @recipe, :image, size: "280x200" %></p>
-            <tbody>
-              <% @recipe.makings.each do |making| %>
-                <tr>
-                  <div class="box-image">
-                    <div><%= attachment_image_tag making, :image, size: "130x130" %></div>
-                    <div class="box-image-text"><%= making.making_detail %></div>
-                  </div>
-                </tr>
+      <h1>
+        <%= @recipe.recipe_title %>
+        <span id="recipelike"><%= render 'favolites/favolite', recipe: @recipe %></span>
+      </h1>
+        <p><%= attachment_image_tag @recipe, :image, size: "280x200" %></p>
+          <% @recipe.makings.each do |making| %>
+            <div class="box-image">
+              <div><%= attachment_image_tag making, :image, size: "130x130" %></div>
+              <div class="box-image-text"><%= making.making_detail %></div>
+            </div>
+          <% end %>
+          <h5>材料</h5>
+          <div class="food_box">
+            <%= @recipe.food %>
+          </div>
+          <div class="recipe_detail_image">
+            <div class="detail_heading"><h5>レシピ詳細</h5></div>
+            <div class="detail_text"><%= @recipe.recipe_detail %></div>
+          </div>
+          <h5>ユーザー</h5>
+          <%= attachment_image_tag(@user, :profile_image, size: "100x100", fallback: "no_image.jpg") %>
+          <%= @recipe.user.name %>
+          <p><%= render 'relathionsips/rilathionsip',user: @recipe.user %><p>
+          <div>
+            <p>コメント件数：<%= @recipe.post_comments.count %></p>
+            <% @recipe.post_comments.each do |post_comment| %>
+              <%= post_comment.user.name %>
+              <%= post_comment.comment %>
+            <% end %>
+          </div>
+          <div>
+            <% if current_user != @recipe.user %>
+              <%= form_with(model:[@recipe, @postcomment], local: true) do |f| %>
+                <%= f.text_area :comment, rows:'5',placeholder: "コメントをここに" %>
+                <%= f.submit "送信する" %>
               <% end %>
-                <tr>
-                  <p></p>
-                  <h5>材料</h5>
-                    <td><%= @recipe.food %></td>
-                  <p></p>
-                  <h5>レシピ詳細</h5>
-                    <td><%= @recipe.recipe_detail %></td>
-                  <p></p>
-                    <h5>ユーザー</h5>
-                      <%= attachment_image_tag(@user, :profile_image, size: "100x100", fallback: "no_image.jpg") %>
-                      <%= @recipe.user.name %>
-                      <p><%= render 'relathionsips/rilathionsip',user: @recipe.user %><p>
-                  </tr>
-                    <tbody>
-                      <div>
-                        <p>コメント件数：<%= @recipe.post_comments.count %></p>
-                          <% @recipe.post_comments.each do |post_comment| %>
-                          <%= post_comment.user.name %>
-                          <%= post_comment.comment %>
-                          <% end %>
-                      </div>
-  
-                      <div>
-                        <% if current_user != @recipe.user %>
-                        <%= form_with(model:[@recipe, @postcomment], local: true) do |f| %>
-                          <%= f.text_area :comment, rows:'5',placeholder: "コメントをここに" %>
-                          <%= f.submit "送信する" %>
-                          <% end %>
-                        <% end %>
-                      </div>
-                    </tbody>
+            <% end %>
+          </div>
         <%= link_to 'レシピを編集する', edit_recipe_path(@recipe), class: "fas fa-edit btn btn-sm btn-success edit_recipe_#{@recipe.id}" %>
         <%= link_to 'レシピを削除する', recipe_path(@recipe), method: :delete, data: { confirm: '本当に消しますか？' }, class: "fas fa-trash-alt btn btn-sm btn-danger destroy_recipe_#{@recipe.id}" %>
       </div>
