--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,19 +1,19 @@
-
-<div class="container">
-  <div class="row">
-      <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6">
-       <h1>welcome to
-       <strong>Cooking Link</strong>  !!</h1>
-       <p>Cooking Linkは、料理に関するレシピ又は技術を共有し合うことのできるサイトとなっております。</p>
-       <p>学びの場または、ノート代わりとしてご活用下さい！</p>
-       <div class="btn-wrapper col-10 mx-auto">
-         <div class="row">
-           <%= link_to 'Log in',new_user_session_path, class:"btn btn-info btn-sm btn-block mb-3" %>
+<div class="main-kv">
+  <div class="container">
+    <div class="row">
+        <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6 bg-white-50 p-3">
+         <strong>Cooking Link</strong>  !!</h1>
+         <p>Cooking Linkは、料理に関するレシピ又は技術を共有し合うことのできるサイトとなっております。</p>
+         <p>学びの場または、ノート代わりとしてご活用下さい！</p>
+         <div class="btn-wrapper col-10 mx-auto">
+           <div class="row">
+             <%= link_to 'Log in',new_user_session_path, class:"btn btn-info btn-sm btn-block mb-3" %>
+           </div>
+           <div class="row">
+             <%= link_to 'Sign Up', new_user_registration_path, class:"btn btn-success btn-sm btn-block" %>
+           </div>
          </div>
-         <div class="row">
-           <%= link_to 'Sign Up', new_user_registration_path, class:"btn btn-success btn-sm btn-block" %>
-         </div>
-       </div>
-      </div>
-     </div>
+        </div>
+    </div>
+  </div>
 </div>
