--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -1,11 +1,11 @@
 <div class='container'>
   <div class="row">
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <h3 class="fas fa-receipt"><span> Edit recipe</span></h3>
       <%= form_with model: @recipe, local:true do |f| %>
         <div class="form-group">
           <%= f.text_field :recipe_title, class: "form-control", placeholder: 'レシピタイトル' %>
         </div>
-
           <%= f.label '出来上がりイメージ'%>
           <%= f.attachment_field :image %>
 
