--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,17 +1,15 @@
 <div class='container px-5 px-sm-0'>
   <div class="row">
       <div class='col-md-3'>
-        <p></p>
           <div class= "profile_box">
             <%= render 'users/profile', user: current_user %>
           </div>
-          <p></p>
           <div class= "search_image">
             <% if user_signed_in? %>
             <%= form_tag(search_path, method: :get) do %>
-  
+
              <%= select_tag 'range' ,options_for_select([['---選択してください---', ''], ['User', '1'], ['Recipe', '2']]) %>
-  
+
              <%= select_tag 'search', options_for_select([["前方一致","forward_match"], ["後方一致","backward_match"], ["完全一致","perfect_match"], ["部分一致","partial_match"]]) %>
              <%= text_field_tag (:word) %>
              <%= submit_tag "検索" %>
@@ -36,8 +34,8 @@
               <td>
                 <%= attachment_image_tag recipe, :image, size: "130x130" %>
               </td>
-              <td><%= link_to recipe.recipe_title,recipe_path(recipe) %></td>
-              <td><%= recipe.user.name %></td>
+              <td><h4><%= link_to recipe.recipe_title,recipe_path(recipe) %></h4></td>
+              <td><%= recipe.user.name %><p class="profile_icon"><%= attachment_image_tag(@user, :profile_image, size: "100x100", fallback: "no_image.jpg") %></p></td>
               <% if current_user.id == @recipe.user_id %>
               <td><%= link_to 'レシピを編集', edit_recipe_path(@recipes) %></td>
             </tr>
