--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,23 +1,19 @@
 <div class='container'>
   <div class="row">
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <h3 class="fas fa-receipt"><span> Make recipe</span></h3>
       <%= form_with model: @recipe, local:true do |f| %>
         <div class="form-group">
-          <p></p>
           <%= f.text_field :recipe_title, class: "form-control", placeholder: 'レシピタイトル' %>
         </div>
-
           <%= f.label '出来上がりイメージ'%>
           <%= f.attachment_field :image %>
-
         <div class="form-group">
           <%= f.text_area :recipe_detail, class: "form-control", placeholder: 'レシピ詳細'  %>
         </div>
-
         <div class="form-group">
           <%= f.text_area :trick, class: "form-control", placeholder: 'コツまたはレシピについて'  %>
         </div>
-
         <div class="form-group">
           <p><%= f.label '材料' %><p>
           <%= f.text_area :food, class: "form-control", placeholder: '例  塩  〜g'  %>
@@ -25,7 +21,7 @@
         <div class="making-post">
           <div class="making">
             <%= f.fields_for :makings do |t| %>
-            <%= render "making_fields", f: t %>
+              <%= render "making_fields", f: t %>
             <% end %>
           </div>
           <div class="links">
