--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -1,21 +1,21 @@
 <table class='table'>
-  <h1>My profile</h1>
-    <tr><%= attachment_image_tag(@user, :profile_image, size: "100x100", fallback: "no_image.jpg") %></tr>
-      <p></p>
-      <p><%= link_to 'プロフィール編集',edit_user_path(user),class: "fas fa-user-edit btn btn-outline-success" %></p>
-      <p><%= link_to 'My recipeへ',users_path, class: "bi bi-file-person-fill btn btn-outline-success" %></p>
-      <tr>
-        <th>name</th>
-        <th><%=link_to user.name %></th>
-      </tr>
-        <tr>
-        <th>フォロー数</th>
-        <th><%= link_to user.followings.count,user_followings_path(user.id) %></th>
-      </tr>
-        <tr>
-          <th>フォロワー数</th>
-          <th><%= link_to user.followers.count, user_followers_path(user.id) %></th>
-        </tr>
-  </div>
+  <h1 class="profile_text">My profile</h1>
+    <div class="myprofile_box">
+      <%= attachment_image_tag(@user, :profile_image, size: "120x120", fallback: "no_image.jpg") %>
+    </div>
+    <p class="profile_edit"><%= link_to 'プロフィール編集',edit_user_path(user),class: "fas fa-user-edit btn btn-outline-success" %></p>
+    <p class="profile_edit2"><%= link_to 'My recipeへ',users_path, class: "bi bi-file-person-fill btn btn-outline-success" %></p>
+    <tr>
+      <th>name</th>
+      <th><%=link_to user.name,users_path %></th>
+    </tr>
+    <tr>
+      <th>フォロー数</th>
+      <th><%= link_to user.followings.count,user_followings_path(user.id) %></th>
+    </tr>
+    <tr>
+      <th>フォロワー数</th>
+      <th><%= link_to user.followers.count, user_followers_path(user.id) %></th>
+    </tr>
 </table>
 
