--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,18 +1,22 @@
 <div class='container px-5 px-sm-0'>
   <div class="row">
       <div class='col-md-3'>
-        <%= render 'users/profile', user: current_user %>
-        <% if user_signed_in? %>
-        <%= form_tag(search_path, method: :get) do %>
+          <div class= "profile_box">
+            <%= render 'users/profile', user: current_user %>
+          </div>
+          <div class= "search_image">
+            <% if user_signed_in? %>
+            <%= form_tag(search_path, method: :get) do %>
 
-         <%= select_tag 'range' ,options_for_select([['---選択してください---', ''], ['User', '1'], ['Recipe', '2']]) %>
+             <%= select_tag 'range' ,options_for_select([['---選択してください---', ''], ['User', '1'], ['Recipe', '2']]) %>
 
-         <%= select_tag 'search', options_for_select([["前方一致","forward_match"], ["後方一致","backward_match"], ["完全一致","perfect_match"], ["部分一致","partial_match"]]) %>
-         <%= text_field_tag (:word) %>
-         <%= submit_tag "検索" %>
-        <% end %>
-        <% end %>
-    </div>
+             <%= select_tag 'search', options_for_select([["前方一致","forward_match"], ["後方一致","backward_match"], ["完全一致","perfect_match"], ["部分一致","partial_match"]]) %>
+             <%= text_field_tag (:word) %>
+             <%= submit_tag "検索" %>
+            <% end %>
+            <% end %>
+        </div>
+      </div>
     <div class='col-md-8 offset-md-1'>
       <table class='table table-hover table-inverse'>
         <thead>
@@ -30,7 +34,7 @@
               <td>
                 <%= attachment_image_tag recipe, :image, size: "130x130" %>
               </td>
-              <td><%= link_to recipe.recipe_title,recipe_path(recipe) %></td>
+              <h5><%= link_to recipe.recipe_title,recipe_path(recipe) %></h5>
               <td><%= recipe.user.name %></td>
               <% if current_user.id == recipe.user_id %>
               <td><%= link_to 'レシピを編集', edit_recipe_path(recipe) %></td>
