一部機能修正

--- a/app/views/favolites/create.js.erb
+++ b/app/views/favolites/create.js.erb
@@ -1,1 +1,1 @@
-$("#recipel").html("<%= j (render 'favolites/favolite', recipe: @recipe) %>");
+$("#recipelike").html("<%= j (render 'favolites/favolite', recipe: @recipe) %>");
